--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -48,8 +48,21 @@
         <item name="android:layout_height">@dimen/ninchat_close_button_height</item>
         <item name="android:background">@drawable/ninchat_chat_close_button</item>
         <item name="android:drawableEnd">@drawable/ninchat_icon_chat_close_button</item>
+        <item name="android:textColor">@color/ninchat_color_chat_close_button</item>
         <item name="android:drawablePadding">@dimen/ninchat_chat_activity_close_button_end_margin
         </item>
+    </style>
+
+    <style name="NinchatTheme.Button.Close.Chat.Top" parent="NinchatTheme.Button.Close.Chat">
+        <item name="android:background">@drawable/ninchat_close_button</item>
+        <item name="android:drawableEnd">@drawable/ninchat_icon_close_button</item>
+        <item name="android:textColor">@color/ninchat_color_close_button</item>
+    </style>
+
+    <style name="NinchatTheme.Button.Close.Titlebar" parent="NinchatTheme.Button.Close.Chat.Top">
+        <item name="android:background">@drawable/ninchat_titlebar_close_button</item>
+        <item name="android:drawableEnd">@drawable/ninchat_icon_titlebar_close_button</item>
+        <item name="android:textColor">@color/ninchat_color_titlebar_close_button</item>
     </style>
 
     <style name="NinchatTheme.Button.Send" parent="NinchatTheme.Button.Close">
