--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -66,4 +66,8 @@
     <color name="ninchat_color_titlebar_close_button">@color/ninchat_colorAccent</color>
 
 
+    <color name="ninchat_color_questionnaire_label_text">@color/ninchat_color_text_normal</color>
+    <color name="ninchat_color_questionnaire_label_text_disabled">@color/ninchat_color_text_disabled</color>
+
+
 </resources>
