--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -67,6 +67,7 @@
 
 
     <color name="ninchat_color_questionnaire_label_text">@color/ninchat_color_text_normal</color>
+    <color name="ninchat_color_questionnaire_label_text_error">@color/ninchat_color_error_background</color>
     <color name="ninchat_color_questionnaire_label_text_disabled">@color/ninchat_color_text_disabled</color>
 
 
