--- a/ninchatsdk/src/main/res/layout/dropdown_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_with_label.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom"
     android:orientation="vertical">
 
@@ -9,9 +10,8 @@
         android:id="@+id/dropdown_text_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom"
-        android:text="Label Name"
-        android:theme="@style/NinchatTheme.Questionnaire.Label" />
+        tools:text="Label Name"
+        style="@style/NinchatTheme.Questionnaire.Label" />
 
     <include layout="@layout/dropdown_list" />
 </LinearLayout>
