textview: add textview related resources

--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -70,5 +70,8 @@
     <color name="ninchat_color_questionnaire_label_text_error">@color/ninchat_color_error_background</color>
     <color name="ninchat_color_questionnaire_label_text_disabled">@color/ninchat_color_text_disabled</color>
 
+    <color name="ninchat_color_questionnaire_textview_text">@color/ninchat_color_text_normal</color>
+    <color name="ninchat_color_questionnaire_textview_text_disabled">@color/ninchat_color_text_disabled</color>
+
 
 </resources>
