--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -100,10 +100,12 @@
     <dimen name="ninchat_questionnaire_items_margin_top">10dp</dimen>
     <dimen name="ninchat_questionnaire_items_margin_left">15dp</dimen>
     <dimen name="ninchat_questionnaire_items_margin_right">15dp</dimen>
-    <dimen name="ninchat_questionnaire_label_text_size">18sp</dimen>
     <dimen name="ninchat_questionnaire_item_dropdown_height">40dp</dimen>
     <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
     <dimen name="ninchat_questionnaire_checkbox_margin">10dp</dimen>
+
+    <dimen name="ninchat_questionnaire_label_text_size">@dimen/ninchat_text_size</dimen>
+    <dimen name="ninchat_questionnaire_textview_text_size">@dimen/ninchat_text_size</dimen>
 
     <!-- Titlebar -->
     <dimen name="ninchat_title_bar_height">-2dp</dimen>
