--- a/ninchatsdk/src/main/res/layout/text_view.xml
+++ b/ninchatsdk/src/main/res/layout/text_view.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
+        style="@style/NinchatTheme.Questionnaire.TextView"
         android:text="First, tell a bit about your situation so we can help you better."
         android:textColor="@color/ninchat_color_text_normal" />
 
