--- a/ninchatsdk/src/main/res/layout/text_field_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_field_with_label.xml
@@ -23,9 +23,10 @@
             android:id="@+id/simple_text_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:gravity="start|center_vertical"
             android:minHeight="50dp"
             android:singleLine="true"
-            android:background="@android:color/transparent"
             android:theme="@style/NinchatTheme.Questionnaire.InputText.Cursor"
             tools:hint="Enter text" />
 
