--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -78,5 +78,8 @@
     <color name="ninchat_color_questionnaire_input_text_focus">@color/ninchat_color_text_normal</color>
     <color name="ninchat_color_questionnaire_input_text_placeholder">@color/ninchat_color_hint</color>
 
+    <color name="ninchat_color_questionnaire_checkbox_label">@color/ninchat_color_text_normal</color>
+    <color name="ninchat_color_questionnaire_checkbox_label_selected">@color/ninchat_colorAccent</color>
+
 
 </resources>
