checkbox: refactor drawable components

--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_checkbox_selected.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_checkbox_selected.xml
@@ -8,7 +8,7 @@
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="2dp"
-                android:color="@color/ninchat_color_checkbox_selected" />
+                android:color="#008aff" />
         </shape>
     </item>
     <item
