--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -84,4 +84,9 @@
     <color name="ninchat_color_questionnaire_checkbox_label_selected">@color/ninchat_colorAccent</color>
 
 
+    <color name="ninchat_color_questionnaire_dropdown">@color/ninchat_color_hint</color>
+    <color name="ninchat_color_questionnaire_dropdown_selected">@color/ninchat_colorAccent</color>
+    <color name="ninchat_color_questionnaire_dropdown_error">@color/ninchat_color_text_error</color>
+
+
 </resources>
