--- a/ninchatsdk/src/main/res/layout/dropdown_item_text_view.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_item_text_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/radio_item_text"
-    android:layout_height="wrap_content"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/radio_item_text"
     android:layout_width="match_parent"
-    android:text="Simple radio item text"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:minHeight="50dp"
     android:paddingStart="10dp"
-    android:gravity="center_vertical"
-
-    style="@style/NinchatTheme.Dropdown.Text"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    style="@style/NinchatTheme.Questionnaire.Dropdown.Text"
+    tools:text="Simple radio item text" />
