--- a/ninchatsdk/src/main/res/drawable/ninchat_questionnaire_dropdown_selected.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_questionnaire_dropdown_selected.xml
@@ -4,7 +4,7 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="2dp"
-        android:color="#008aff" />
+        android:color="@color/ninchat_color_questionnaire_dropdown_selected" />
     <padding
         android:bottom="3dp"
         android:left="4dp"
