meta-message: add themes for info messages

--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -152,4 +152,25 @@
         <item name="android:textColor">@color/ninchat_color_questionnaire_bot_name_text</item>
     </style>
 
+    <style name="NinchatTheme.Backlog.Info" parent="NinchatTheme">
+        <item name="android:layout_marginTop">
+            @dimen/ninchat_chat_activity_chat_started_bottom_margin
+        </item>
+        <item name="android:layout_marginBottom">
+            @dimen/ninchat_chat_activity_chat_started_bottom_margin
+        </item>
+        <item name="android:background">@drawable/ninchat_chat_info</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">45dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+    </style>
+
+    <style name="NinchatTheme.Backlog.Info.Text" parent="NinchatTheme">
+        <item name="android:drawableStart">@drawable/ninchat_icon_chat_info_icon</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/ninchat_color_info_text</item>
+    </style>
+
 </resources>
