command-view: background resource for command view

--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -207,6 +207,7 @@
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="true"
             android:layout_alignParentTop="true"
+            tools:visibility="gone"
             android:layout_toStartOf="@id/ninchat_chat_message_user_avatar"
             android:orientation="vertical">
 
