command-view: add transparent background

--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -95,8 +95,8 @@
 
     <color name="ninchat_color_chat_command_input_text">@color/ninchat_color_textarea_text</color>
     <color name="ninchat_color_chat_command_input_text_placeholder">@color/ninchat_color_textarea_text_hint</color>
-    <color name="ninchat_color_chat_command_input_background">#f7f7f7</color>
-    <color name="ninchat_color_chat_command_input_border">#ececec</color>
+    <color name="ninchat_color_chat_command_input_background">@color/ninchat_color_transparent</color>
+    <color name="ninchat_color_chat_command_input_border">@color/ninchat_color_transparent</color>
 
 
 </resources>
