--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -92,7 +92,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:elevation">0dp</item>
         <item name="android:background">@drawable/ninchat_ui_compose_select_button</item>
-        <item name="android:textColor">@color/ninchat_color_ui_compose_select_unselected_text</item>
+        <item name="android:textColor">@color/ninchat_color_ui_compose_select_text</item>
         <item name="android:gravity">center</item>
         <item name="android:textAlignment">center</item>
     </style>
@@ -116,12 +116,12 @@
         <!--<item name="android:windowNoTitle">true</item>-->
     </style>
 
-    <style name="NinchatTheme.Radio.Selected" parent="NinchatTheme.MultiChoice">
-        <item name="android:textColor">@color/ninchat_color_radio_item_selected_text</item>
+    <style name="NinchatTheme.Questionnaire.Radio" parent="NinchatTheme.MultiChoice">
+        <item name="android:minHeight">50dp</item>
     </style>
 
-    <style name="NinchatTheme.Radio.UnSelected" parent="NinchatTheme.MultiChoice">
-        <item name="android:textColor">@color/ninchat_color_radio_item_unselected_text</item>
+    <style name="NinchatTheme.Questionnaire.Radio.Selected" parent="NinchatTheme.MultiChoice.Selected">
+        <item name="android:minHeight">50dp</item>
     </style>
 
     <style name="NinchatTheme.TitlebarPlaceholder">
