--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@drawable/ninchat_chat_background_tiled"
+    android:orientation="vertical"
     android:paddingStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-    android:paddingEnd="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal">
+    android:paddingEnd="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
+    tools:background="@drawable/ninchat_chat_background_tiled">
 
     <View
         android:id="@+id/ninchat_chat_message_padding"
@@ -15,17 +15,24 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <TextView
-        android:id="@+id/ninchat_chat_message_meta"
+    <LinearLayout
+        android:id="@+id/ninchat_chat_message_meta_container"
+        style="@style/NinchatTheme.Backlog.Info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="@dimen/ninchat_chat_activity_chat_started_bottom_margin"
-        android:layout_marginBottom="@dimen/ninchat_chat_activity_chat_started_bottom_margin"
-        tools:text="Chat started"
-        android:textColor="@color/ninchat_color_info_text"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible">
+
+
+        <TextView
+            android:id="@+id/ninchat_chat_message_meta"
+            style="@style/NinchatTheme.Backlog.Info.Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Chat started"
+            tools:visibility="visible" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/ninchat_chat_message_agent"
@@ -39,70 +46,71 @@
             android:id="@+id/ninchat_chat_message_agent_avatar"
             android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
-            android:src="@drawable/ninchat_chat_avatar_left"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/ninchat_chat_avatar_left" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@id/ninchat_chat_message_agent_avatar"
-            android:layout_alignWithParentIfMissing="true"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/ninchat_chat_message_agent_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="@dimen/ninchat_chat_activity_message_title_height"
+                android:layout_gravity="start"
                 android:layout_marginBottom="5dp"
-                android:orientation="horizontal"
-                android:layout_gravity="start">
+                android:minHeight="@dimen/ninchat_chat_activity_message_title_height"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
                     android:id="@+id/ninchat_chat_message_agent_name"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    tools:text="Agent"
-                    android:textColor="@color/ninchat_color_chat_name" />
+                    android:layout_weight="1"
+                    android:textColor="@color/ninchat_color_chat_name"
+                    tools:text="Agent" />
+
                 <TextView
                     android:id="@+id/ninchat_chat_message_agent_timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    tools:text="00:00"
-                    android:textColor="@color/ninchat_color_chat_timestamp"/>
+                    android:textColor="@color/ninchat_color_chat_timestamp"
+                    tools:text="00:00" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ninchat_chat_message_agent_wrapper"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 tools:background="@drawable/ninchat_chat_bubble_left_repeated">
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_agent_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Message from agent"
                     android:autoLink="none"
-                    android:textColorLink="@color/ninchat_color_chat_bubble_left_link"
                     android:textColor="@color/ninchat_color_chat_bubble_left_text"
+                    android:textColorLink="@color/ninchat_color_chat_bubble_left_link"
                     android:visibility="gone"
-                    tools:visibility="visible"/>
+                    tools:text="Message from agent"
+                    tools:visibility="visible" />
 
                 <LinearLayout
                     android:id="@+id/ninchat_chat_message_agent_multichoice"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="vertical"
                     android:visibility="gone"
                     tools:visibility="visible">
 
@@ -110,17 +118,17 @@
                         android:id="@+id/ninchat_chat_message_agent_multichoice_options"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        tools:orientation="vertical"
+                        tools:itemCount="3"
                         tools:listitem="@layout/item_chat_multichoice_unselected"
-                        tools:itemCount="3"/>
+                        tools:orientation="vertical" />
 
                     <Button
                         android:id="@+id/ninchat_chat_message_agent_multichoice_send"
+                        style="@style/NinchatTheme.Button.MultiChoice.Send"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/ninchat_send_button_height"
                         android:layout_gravity="end"
-                        style="@style/NinchatTheme.Button.MultiChoice.Send"
-                        tools:text="Send"/>
+                        tools:text="Send" />
 
                 </LinearLayout>
 
@@ -132,13 +140,13 @@
                         android:id="@+id/ninchat_chat_message_agent_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:layout_width="150dp"
-                        tools:layout_height="150dp"
-                        tools:src="@drawable/ninchat_logo"
-                        android:background="@color/ninchat_colorPrimaryDark"
                         android:adjustViewBounds="true"
+                        android:background="@color/ninchat_colorPrimaryDark"
                         android:visibility="gone"
-                        tools:visibility="visible"/>
+                        tools:layout_height="150dp"
+                        tools:layout_width="150dp"
+                        tools:src="@drawable/ninchat_logo"
+                        tools:visibility="visible" />
 
                     <RelativeLayout
                         android:id="@+id/ninchat_chat_message_agent_video_play_image"
@@ -152,10 +160,10 @@
                         <ImageView
                             android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
                             android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
+                            android:layout_centerInParent="true"
                             android:adjustViewBounds="true"
                             android:scaleType="fitCenter"
-                            android:src="@drawable/ninchat_icon_chat_play_video"
-                            android:layout_centerInParent="true"/>
+                            android:src="@drawable/ninchat_icon_chat_play_video" />
 
                     </RelativeLayout>
 
@@ -165,9 +173,9 @@
                     android:id="@+id/ninchat_chat_message_agent_writing"
                     android:layout_width="@dimen/ninchat_chat_activity_message_writing_indicator_width"
                     android:layout_height="@dimen/ninchat_chat_activity_message_writing_indicator_height"
-                    tools:src="@drawable/ninchat_writing_10"
                     android:visibility="gone"
-                    tools:visibility="visible"/>
+                    tools:src="@drawable/ninchat_writing_10"
+                    tools:visibility="visible" />
 
             </LinearLayout>
 
@@ -188,55 +196,56 @@
             android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
             android:layout_marginStart="@dimen/ninchat_chat_activity_avatar_margin"
-            android:src="@drawable/ninchat_chat_avatar_right"
+            android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/ninchat_chat_avatar_right" />
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
             android:layout_alignParentTop="true"
+            tools:visibility="gone"
             android:layout_toStartOf="@id/ninchat_chat_message_user_avatar"
-            android:layout_alignWithParentIfMissing="true">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/ninchat_chat_message_user_title"
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
                 android:layout_marginBottom="5dp"
-                android:layout_gravity="end">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_user_name"
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    tools:text="User"
+                    android:layout_weight="1"
+                    android:textColor="@color/ninchat_color_chat_name"
                     android:textColorLink="@color/ninchat_color_chat_bubble_right_link"
-                    android:textColor="@color/ninchat_color_chat_name"/>
+                    tools:text="User" />
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_user_timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/ninchat_chat_activity_message_bubble_padding_horizontal"
-                    tools:text="00:00"
-                    android:textColor="@color/ninchat_color_chat_timestamp"/>
+                    android:textColor="@color/ninchat_color_chat_timestamp"
+                    tools:text="00:00" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ninchat_chat_message_user_wrapper"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:background="@drawable/ninchat_chat_bubble_right_repeated"
-                android:layout_gravity="end">
+                android:layout_gravity="end"
+                android:orientation="vertical"
+                tools:background="@drawable/ninchat_chat_bubble_right_repeated">
 
                 <TextView
                     android:id="@+id/ninchat_chat_message_user_message"
@@ -253,27 +262,27 @@
                         android:id="@+id/ninchat_chat_message_user_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:layout_width="150dp"
+                        android:adjustViewBounds="true"
                         tools:layout_height="150dp"
-                        tools:src="@drawable/ninchat_logo"
-                        android:adjustViewBounds="true" />
+                        tools:layout_width="150dp"
+                        tools:src="@drawable/ninchat_logo" />
 
                     <RelativeLayout
                         android:id="@+id/ninchat_chat_message_user_video_play_image"
                         android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
                         android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_background_size"
-                        android:background="@drawable/ninchat_icon_chat_play_video_background"
                         android:layout_centerInParent="true"
+                        android:background="@drawable/ninchat_icon_chat_play_video_background"
                         android:visibility="gone"
                         tools:visibility="visible">
 
                         <ImageView
                             android:layout_width="@dimen/ninchat_chat_activity_message_video_play_icon_size"
                             android:layout_height="@dimen/ninchat_chat_activity_message_video_play_icon_size"
-                            android:src="@drawable/ninchat_icon_chat_play_video"
+                            android:layout_centerInParent="true"
                             android:adjustViewBounds="true"
                             android:scaleType="fitCenter"
-                            android:layout_centerInParent="true"/>
+                            android:src="@drawable/ninchat_icon_chat_play_video" />
 
                     </RelativeLayout>
 
@@ -286,29 +295,37 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:id="@+id/ninchat_chat_message_end"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingTop="@dimen/ninchat_chat_activity_chat_ended_top_margin"
         android:visibility="gone"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/ninchat_chat_message_end_text"
+
+        <LinearLayout
+            android:id="@+id/ninchat_chat_message_end_text_container"
+            style="@style/NinchatTheme.Backlog.Info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            tools:text="Chat ended"
-            android:textColor="@color/ninchat_color_info_text" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/ninchat_chat_message_end_text"
+                style="@style/NinchatTheme.Backlog.Info.Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Chat ended" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/ninchat_chat_message_close"
+            style="@style/NinchatTheme.Button.Close.Chat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/NinchatTheme.Button.Close.Chat"
-            tools:text="Close"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            tools:text="Close" />
 
     </LinearLayout>
 
