--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -85,28 +85,83 @@
     </style>
 
     <style name="NinchatTheme.Questionnaire.InputText.Cursor" parent="NinchatTheme.Questionnaire">
-        <item name="android:colorControlActivated">@color/ninchat_color_questionnaire_input_text_focus</item>
+        <item name="android:colorControlActivated">
+            @color/ninchat_color_questionnaire_input_text_focus
+        </item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:inputType">textMultiLine|textCapSentences</item>
     </style>
 
-    <style name="NinchatTheme.Checkbox" parent="Theme.AppCompat.Light">
-        <item name="android:colorControlActivated">@color/ninchat_color_checkbox_selected</item>
-        <item name="android:colorControlNormal">@color/ninchat_color_checkbox_unselected</item>
+    <style name="NinchatTheme.Questionnaire.Checkbox.Label" parent="NinchatTheme.Questionnaire">
+        <item name="android:textColor">@color/ninchat_color_questionnaire_checkbox_label</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_gravity">center</item>
     </style>
 
-    <style name="NinchatTheme.Dropdown.Item" parent="Theme.AppCompat.Light">
-        <item name="android:divider">@color/ninchat_color_dropdown_unselected_text</item>
+    <style name="NinchatTheme.Questionnaire.Checkbox.Label.Focused" parent="NinchatTheme.Questionnaire.Checkbox.Label">
+        <item name="android:textColor">@color/ninchat_color_questionnaire_checkbox_label_focused
+        </item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Checkbox.Label.Selected" parent="NinchatTheme.Questionnaire.Checkbox.Label">
+        <item name="android:textColor">@color/ninchat_color_questionnaire_checkbox_label_selected
+        </item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Checkbox.Image" parent="NinchatTheme.Questionnaire">
+        <item name="android:src">@drawable/ninchat_chat_checkbox</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Checkbox.Image.Selected" parent="NinchatTheme.Questionnaire.Checkbox.Image">
+        <item name="android:src">@drawable/ninchat_chat_checkbox_selected</item>
+    </style>
+
+
+    <style name="NinchatTheme.Questionnaire.Dropdown" parent="NinchatTheme.Questionnaire">
         <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">@color/ninchat_color_questionnaire_dropdown</item>
+        <item name="android:textColor">@color/ninchat_color_questionnaire_dropdown</item>
+        <item name="android:gravity">center</item>
+        <item name="android:overlapAnchor">false</item>
+        <item name="android:spinnerMode">dropdown</item>
+        <item name="android:dropDownWidth">match_parent</item>
+        <item name="android:background">@drawable/ninchat_questionnaire_dropdown</item>
     </style>
 
-    <style name="NinchatTheme.Dropdown.Spinner" parent="Theme.AppCompat.Light">
-        <item name="android:dropDownListViewStyle">@style/NinchatTheme.Dropdown.Item</item>
+    <style name="NinchatTheme.Questionnaire.Dropdown.Selected" parent="NinchatTheme.Questionnaire.Dropdown">
+        <item name="android:background">@drawable/ninchat_questionnaire_dropdown_selected</item>
+        <item name="android:textColor">@color/ninchat_color_questionnaire_dropdown_selected</item>
     </style>
 
-    <style name="NinchatTheme.Dropdown.Text" parent="Theme.AppCompat.Light">
-        <item name="android:textColor">@color/ninchat_color_dropdown_unselected_text</item>
+    <style name="NinchatTheme.Questionnaire.Dropdown.Error" parent="NinchatTheme.Questionnaire.Dropdown">
+        <item name="android:background">@drawable/ninchat_questionnaire_dropdown_error</item>
     </style>
+
+    <style name="NinchatTheme.Questionnaire.Dropdown.Spinner" parent="NinchatTheme.Questionnaire.Dropdown">
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Dropdown.Text" parent="NinchatTheme.Questionnaire.Dropdown">
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Dropdown.Text.Selected" parent="NinchatTheme.Questionnaire.Dropdown.Selected">
+        <item name="android:background">@null</item>
+    </style>
+
+
+    <style name="NinchatTheme.Questionnaire.Dropdown.Image" parent="Theme.AppCompat.Light">
+        <item name="android:tint">@color/ninchat_color_questionnaire_dropdown</item>
+        <item name="android:src">@drawable/ninchat_questionnaire_dropdown_image</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.Dropdown.Image.Selected" parent="NinchatTheme.Questionnaire.Dropdown.Image">
+        <item name="android:tint">@color/ninchat_color_questionnaire_dropdown_selected</item>
+    </style>
+
 
     <style name="NinchatTheme.Questionnaire.TextView" parent="NinchatTheme.Questionnaire">
         <item name="android:textColor">@color/ninchat_color_questionnaire_textview_text</item>
