assets/questionnaire label (#216)

--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -35,7 +35,7 @@
     <dimen name="ninchat_chat_activity_message_title_top_margin">20dp</dimen>
     <dimen name="ninchat_chat_activity_message_bubble_corner_radius">15dp</dimen>
     <dimen name="ninchat_chat_activity_message_bubble_padding_vertical">12dp</dimen>
-    <dimen name="ninchat_chat_activity_message_bubble_continued_padding_top">19dp</dimen>
+    <dimen name="ninchat_chat_activity_message_bubble_continued_padding_top">16dp</dimen>
     <dimen name="ninchat_chat_activity_message_bubble_padding_horizontal">16dp</dimen>
     <dimen name="ninchat_chat_activity_message_video_play_icon_background_size">35dp</dimen>
     <dimen name="ninchat_chat_activity_message_video_play_icon_size">17dp</dimen>
@@ -100,14 +100,18 @@
     <dimen name="ninchat_questionnaire_items_margin_top">10dp</dimen>
     <dimen name="ninchat_questionnaire_items_margin_left">15dp</dimen>
     <dimen name="ninchat_questionnaire_items_margin_right">15dp</dimen>
-    <dimen name="ninchat_questionnaire_item_label_text_size">20sp</dimen>
     <dimen name="ninchat_questionnaire_item_dropdown_height">40dp</dimen>
     <dimen name="ninchat_questionnaire_item_bot_height">50dp</dimen>
     <dimen name="ninchat_questionnaire_checkbox_margin">10dp</dimen>
 
+    <dimen name="ninchat_questionnaire_label_text_size">@dimen/ninchat_text_size</dimen>
+    <dimen name="ninchat_questionnaire_textview_text_size">@dimen/ninchat_text_size</dimen>
+
     <!-- Titlebar -->
     <dimen name="ninchat_title_bar_height">-2dp</dimen>
     <dimen name="ninchat_chat_activity_text_margin">15dp</dimen>
+
+    <dimen name="ninchat_chat_info_text_size">@dimen/ninchat_text_size</dimen>
 
 
 </resources>
