--- a/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
@@ -8,15 +8,14 @@
     android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom">
 
     <TextView
-        android:theme="@style/NinchatTheme.Questionnaire.Label"
-        android:layout_marginBottom="@dimen/ninchat_questionnaire_item_margin_bottom"
+        style="@style/NinchatTheme.Questionnaire.Label"
         android:id="@+id/radio_option_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Element label"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/ninchat_color_transparent"
+        android:background="@drawable/ninchat_chat_questionnaire_background"
         android:id="@+id/ninchat_chat_radio_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
